# RustStoreNix

./: .gitignore  Cargo.toml  flake.nix  justfile
.config/flakebox/: id
.github/workflows/: flakebox-ci.yml
IronAge/: Cargo.toml
IronAge/corelib/: Cargo.toml
IronAge/db/: Cargo.toml
IronAge/iron_age/: Cargo.toml
IronAge/sync/: Cargo.toml
IronAge/ui/: Cargo.toml
IronAge/web/: Cargo.toml
RustStore/: Cargo.toml  flake.nix
RustStore/client/ui/: Cargo.toml
RustStore/corelogic/: Cargo.toml
RustStore/sync/: Cargo.toml
RustStore/syncdb/: Cargo.toml
client/ui/: Cargo.toml
corelib/: Cargo.toml
corelogic/: Cargo.toml
misc/git-hooks/: commit-msg  pre-commit
nix/: craneBuild.nix  craneCommon.nix
server/: Cargo.toml
