[workspace]
resolver = "2"
members = [
    "corelib",
    "corelogic",
    "sync",
    "syncdb",
    "server",
    "client/ui",
]


[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = 'off'
panic = 'unwind'
incremental = true
split-debuginfo = "unpacked"

[profile.ci]
inherits = "dev"
debug = "line-tables-only"
incremental = false

[profile.release]
strip = true

[workspace.dependencies]
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-http = "3.3.1"
actix-identity = "0.5.2"
actix-session = {version = "0.7.2", features = ["cookie-session", "actix"]}
actix-web = { version = "4.3.1", features = [] }
bcrypt = "0.15.0"
better-panic = "0.3.0"
# Upgrade cuando cambien sync
clap = { version = "2.34.0", default-features = false }
comrak = {version = "0.18.0", default-features = false, features = []}
csv = "1.2.2"
derivative = "2.2.0"
derive_more = "0.99.17"
directories = "5.0.1"
dotenv = "0.15.0"
encoding = "0.2.33"
fastrand = "2.0.0"
fs2 = "0.4.3"
futures = "0.3.28"
glob = "0.3.1"
heck = "0.4.1"
indexmap = { version = "2.0.0", features = ["serde"] }
itertools = "0.11.0"
lazy_static= "1.4.0"
log = "0.4.19"
log-panics = "2.1.0"
num-traits = "0.2.16"
percent-encoding = "2.3.0"
quick-xml = { version = "0.30.0", features = [ "serialize", "encoding" ] }
rust-embed={version = "6.8.1", features = ["include-exclude"]}
rusty_ulid = "2.0.0"
serde = { version = "*", features = ["derive"] }
serde_json = { version = "1.0.104", features = [ "std" ] }
serial_test = "2.0.0"
structopt = "0.3.26"
strum = { version = "0.25.0", features = ["derive"] }
tera = { version = "1.19.0", features = ["preserve_order"] }
tokio = { version = "1.29.1", features = ["macros", "rt", "rt-multi-thread"] }
toml = "0.7.6"
totp-rs = "5.1.0"
tracing-actix-web = "0.7.5"
umya-spreadsheet = "0.9.2"
url = "2.4.0"

# Workaround: https://github.com/rust-lang/cargo/issues/12457 which causes
#             https://github.com/ipetkov/crane/issues/370
[profile.dev.build-override]
debug = false
[profile.ci.build-override]
debug = false