[workspace]
resolver = "2"
members = [
    "corelib",
    "db",
    "iron_age",
    "sync",
    "ui",
    "web"
]

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = 'off'
panic = 'unwind'
incremental = true
split-debuginfo = "unpacked"

[workspace.dependencies]
async-stream = "0.3.5"
async-trait = "0.1.72"
chrono = { version = "0.4.26", features = ["default", "serde"] }
crossbeam-channel = "0.5.8"
deadpool = "0.9.5"
deadpool-postgres = { version = "0.10.5", features = ["rt_tokio_1"] }
decorum = { version = "0.3.1", features = ["std"] }
derive_more = "0.99.17"
flate2 = "*"
futures = "0.3.28"
futures-core = "0.3.28"
gethostname = "0.4.3"
heck = "0.4.1"
http = "0.2.9"
http-auth-basic= "0.3.3"
indexmap = { version = "2.0.0", features = ["serde"] }
lazy_static = "1.4.0"
postgres-types = { version = "0.2.5", features = ["derive"] }
rmp-serde = "1.1.2"
rusqlite = { version = "0.30.0", features = ["bundled", "column_decltype", "functions", "chrono", "serde_json"] }
rust_decimal = { version = "1.30.0", features = ["db-tokio-postgres"] }
rusty_ulid = "2.0.0"
serde = { version ="1.0.178", features = ["derive"] }
serde_json = { version ="1.0.104", features = [ "preserve_order" ]}
serde_path_to_error = "0.1.14"
strum = { version = "0.25.0", features = ["derive"] }
tempfile = "3.7.0"
tera = { version ="1.19.0", features = ["urlencode", "slug", "humansize", "chrono", "rand"] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
tokio-postgres = { version = "=0.7.2", features = ["with-uuid-0_8", "with-chrono-0_4", "with-serde_json-1"] }
tracing-appender = "0.2.2"
tracing-core = "0.1.31"
tracing-futures = "0.2.5"
tracing-journald = "0.3.0"
tracing-log = "0.1.3"
tracing-subscriber = {version="0.3.17", features = ["env-filter", "tracing-log"] }
tracing= {version="0.1.37", features = ["log"] }
unicode-normalization= "0.1.22"
#ureq = { version = "2.7.1", features = ["default", "json", "charset", "cookies"] }
ureq = {  git = "https://github.com/mamcx/ureq.git" , features = ["default", "json", "charset", "cookies"] }
url = "2.4.0"