[package]
name = "iron-age-core"
version = "0.1.5"
authors = ["Mario Montoya <mamcx@elmalabarista.com>"]
description = "Global functionality for IronAge"
edition = "2021"
categories = ["database"]

[dependencies]
chrono.workspace = true
derive_more.workspace = true
gethostname.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tracing-appender.workspace = true
tracing-core.workspace = true
tracing-futures.workspace = true
tracing-journald.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
url.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
ansi_term = "0.12.1"
