[package]
name = "iron-age-sync"
version = "0.1.5"
authors = ["Mario Montoya <mamcx@elmalabarista.com>"]
description = "An CRDT specialized for database with CRUD semantics"
edition = "2021"
categories = ["database"]
keywords = ["database", "crdt", "sync"]

[dependencies]
iron-age-core = { path = "../corelib" }
postgres-types.workspace = true
rusqlite.workspace = true
serde.workspace = true
